--- a/msgs/CMakeLists.txt
+++ b/msgs/CMakeLists.txt
@@ -9,6 +9,8 @@ endforeach()
 
 set (msgs
   collision_map_request.proto
+  ${PROTOBUF_IMPORT_DIRS}/header.proto  
+  ${PROTOBUF_IMPORT_DIRS}/time.proto  
 )
 
 PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${msgs})
